# prefect-xquik

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  justfile  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_client_helpers.py  project.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  publish.yml  scorecard.yml
examples/: social_signal_flow.py
prefect_xquik/: __init__.py  _version.py  client.py  credentials.py  tasks.py
scripts/: build_reproducibly.sh
tests/: test_block_standards.py  test_client.py  test_credentials.py  test_package_metadata.py  test_tasks.py
