[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-xquik"
version = "0.1.0"
description = "Prefect collection for Xquik read workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Xquik" }]
keywords = ["prefect", "xquik", "twitter", "x", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Prefect",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "prefect>=3.0.0",
]

[project.urls]
Documentation = "https://docs.xquik.com/api-reference/overview"
Source = "https://github.com/Xquik-dev/prefect-xquik"

[project.entry-points."prefect.collections"]
prefect_xquik = "prefect_xquik"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.setuptools.packages.find]
include = ["prefect_xquik*"]
