[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-xquik"
version = "0.1.7"
description = "Prefect collection for scheduled X/Twitter data workflows with Xquik. Not affiliated with X Corp."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Xquik" }]
keywords = [
    "automation",
    "data-pipelines",
    "prefect",
    "prefect-collection",
    "prefect-integration",
    "social-media",
    "twitter-api",
    "workflow-orchestration",
    "x-api",
    "x-twitter",
    "xquik",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "prefect>=3.0.0",
]

[project.urls]
Documentation = "https://docs.xquik.com/guides/prefect"
Homepage = "https://docs.xquik.com/guides/prefect"
Changelog = "https://github.com/Xquik-dev/prefect-xquik/blob/main/CHANGELOG.md"
Issues = "https://github.com/Xquik-dev/prefect-xquik/issues"
Source = "https://github.com/Xquik-dev/prefect-xquik"
"Xquik API Reference" = "https://docs.xquik.com/api-reference/overview"

[project.entry-points."prefect.collections"]
prefect_xquik = "prefect_xquik"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-env>=1.1",
    "ruff>=0.8",
    "tomli>=2; python_version < '3.11'",
    "twine>=6.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
env = ["PREFECT_TEST_MODE=1"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.setuptools.packages.find]
include = ["prefect_xquik*"]

[tool.setuptools.package-data]
prefect_xquik = ["py.typed"]
